# IgnitionEngine

./: CMakeLists.txt  README.md  imgui.ini
assets/: Other.json  scene.json
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: main.cpp
src/editor/: HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  Library.cpp  Library.h  ViewportPanel.cpp  ViewportPanel.h
src/object/: Component.h  GameObject.cpp  GameObject.h  Material.h  Mesh.cpp  Mesh.h  RendererComponent.h  Scene.cpp  Scene.h  Transform.h  Vector3.h
